# locusguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/grch38/SMN/: SMN1.yaml  SMN2.yaml
src/locusguard/: __init__.py  api.py  assigner.py  capture_bed.py  deletion.py  preflight.py  scoring.py  types.py
src/locusguard/cli/: __init__.py  annotate.py  main.py
src/locusguard/cn/: __init__.py  estimator.py
src/locusguard/config/: __init__.py  loader.py  resolver.py  schema.py
src/locusguard/configs/grch38/SMN/: SMN1.yaml  SMN2.yaml
src/locusguard/depth/: __init__.py  region.py
src/locusguard/evidence/: __init__.py  base.py  coverage_ratio.py  haplotype_consistency.py  mapq_pattern.py  psv.py  softclip.py
src/locusguard/haplotype/: __init__.py  clustering.py  consensus.py
src/locusguard/io/: __init__.py  bam.py  fasta.py  reference.py  vcf.py
src/locusguard/projection/: __init__.py  vcf.py
src/locusguard/reporting/: __init__.py  assignments_tsv.py  haplotypes_tsv.py  html_report.py  manifest.py  summary.py
tests/: conftest.py
tests/integration/: test_annotate_e2e.py  test_capture_bed_e2e.py  test_cn_estimation_e2e.py  test_deletion_e2e.py  test_gene_conversion_e2e.py  test_short_read_e2e.py
tests/unit/: test_api.py  test_assigner.py  test_capture_bed.py  test_cn_estimator.py  test_config_loader.py  test_config_resolver.py  test_config_schema.py  test_deletion.py  test_depth_region.py  test_evidence_coverage_ratio.py  test_evidence_haplotype_consistency.py  test_evidence_mapq_pattern.py  test_evidence_psv.py  test_evidence_softclip.py  test_haplotype_clustering.py  test_haplotype_consensus.py  test_io_bam.py  test_io_fasta.py  test_io_reference.py  test_io_vcf.py  test_preflight.py  test_projection_vcf.py  test_reporting_assignments_tsv.py  test_reporting_haplotypes_tsv.py  test_reporting_html.py  test_reporting_manifest.py  test_reporting_summary.py  test_scoring.py  test_types.py
